# android-automotive-blockchain-2023

./: README.md
Android Automotive App/: README.md
Android Automotive App/app_implementation_lib_sdk/: build.gradle  gradle.properties  settings.gradle
Android Automotive App/app_implementation_lib_sdk/app/: build.gradle
Android Automotive App/app_implementation_lib_sdk/app/src/androidTest/java/com/example/app_implementation_lib_sdk/: ExampleInstrumentedTest.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/: AndroidManifest.xml
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/app_implementation_lib_sdk/: GetData.kt  GetData2.kt  MainActivity.kt  MyService.kt  PostExtrinsic.kt  SignerTest.kt  SubstrateCall.kt  Test.java  VehicleDataOuterClass.java  carService.kt  example123.txt  test.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/app_implementation_lib_sdk/constants/: Constant.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/: SubstrateApi.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/account/: Account.kt  Mnemonic.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/rpc/: RpcMethod.kt  SubstrateProvider.kt  SubstrateRpc.kt  WebSocketRpc.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/scale/: AccountInfo+Parser.kt  RuntimeMetadata+Parser.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/scale/v1/: AccountInfo+Parser.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/types/: AccountInfo.kt  RuntimeVersion.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/java/com/example/nodle/substratesdk/utils/: xxHash.kt
Android Automotive App/app_implementation_lib_sdk/app/src/main/res/layout/: activity_get_data.xml  activity_get_data2.xml  activity_main.xml  activity_post_extrinsic.xml
Android Automotive App/app_implementation_lib_sdk/app/src/main/res/values/: strings.xml  themes.xml
Android Automotive App/app_implementation_lib_sdk/app/src/main/res/values-night/: themes.xml
Android Automotive App/app_implementation_lib_sdk/app/src/test/java/com/example/app_implementation_lib_sdk/: ExampleUnitTest.kt
Android Automotive App/app_implementation_lib_sdk/gradle/wrapper/: gradle-wrapper.properties
Android Automotive App/app_implementation_lib_sdk/sr25519-java/: Cargo.toml
Android Automotive App/app_implementation_lib_sdk/sr25519-java/src/: lib.rs
Substrate Blockchain/: README.md  vehicle_data.dot  vehicle_data.proto
Substrate Blockchain/Js/: README.md  common.ts  get_block_stats.ts  get_current_block_number.ts  get_current_tx_queue.ts  package-lock.json  package.json  tsconfig.json  tslint.json
Substrate Blockchain/benchmark/: .gitignore  README.md  additional_types.js  benchmark.sh  big_tests.sh  config.sh  init.sh  package-lock.json  package.json
Substrate Blockchain/cloud-deployments/: config.sh  delete-deployment.sh  deploy.sh  grafana.json  ipfs.yaml  substrate.yaml
Substrate Blockchain/results/: make_csv_with_stats.py  stats_cloud_output_tps.eps  stats_cloud_test_1_0collator_output_tps.eps  stats_cloud_test_2_0collator_output_tps.eps  stats_cloud_test_4_0collator_output_tps.eps  stats_cloud_tests.gnuplot
Substrate Blockchain/results/block_logs/: test_1_10000totaltx_-1collator_1000tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_100tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_1500tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_1800tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_2000tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_200tps__block_stats_Local Testnet.csv  test_1_10000totaltx_-1collator_600tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_1000tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_100tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_1500tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_1800tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_2000tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_200tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_400tps__block_stats_Local Testnet.csv  test_2_10000totaltx_0collator_600tps__block_stats_Local Testnet.csv  test_3_50000totaltx_0collator_1000tps__block_stats_Local Testnet.csv  test_4_20000totaltx_0collator_1000tps__block_stats_Local Testnet.csv
Substrate Blockchain/results/block_logs/compiled/: test_1__1collator_stats_values.csv  test_2__0collator_stats_values.csv  test_3__0collator_stats_values.csv  test_4__0collator_stats_values.csv
Substrate Blockchain/results/test_1_old/: stats_cloud_output_tps.eps  test_1__1collator_stats_values.csv
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/: .dockerignore  Dockerfile-installed-bionic  Dockerfile-ubuntu-22.04
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/node/src/: chain_spec.rs
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/pallets/sim_renault/: Cargo.toml
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/pallets/sim_renault/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/pallets/sim_renault_accident/: Cargo.toml
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/pallets/sim_renault_accident/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/runtime/: Cargo.toml
Substrate Blockchain/substrate-node-template-polkadot-v0.9.35/runtime/src/: lib.rs
Substrate Blockchain/vehicle_data/: VehicleDataOuterClass.java
(+1 files in other folders)
